# peer-transfer

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  WHY_STANDALONE_ASIO.md  build_and_test.bat
include/: receiver.h  sender.h  utils.h
include/io/: file_reader.h  file_writer.h
include/peer/: Receiver.h  Sender.h
src/: main.cpp  main_receiver.cpp  main_sender.cpp  receiver.cpp  sender.cpp  utils.cpp
src/io/: file_reader.cpp  file_writer.cpp
tests/: README.md  Receiver_rule5_test.cpp  Sender_rule5_test.cpp  receiver_test.cpp  sender_test.cpp  utils_test.cpp
